Make 'Path' immutable